lib/sqlstore/query/parser.js
exports.Parser = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successfull,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input, startRule) {
      var parseFunctions = {
        "start": parse_start,
        "select": parse_select,
        "selectFull": parse_selectFull,
        "selectShort": parse_selectShort,
        "selectClause": parse_selectClause,
        "selectExpression": parse_selectExpression,
        "selectIdent": parse_selectIdent,
        "selectEntity": parse_selectEntity,
        "selectAggregation": parse_selectAggregation,
        "aggregation": parse_aggregation,
        "alias": parse_alias,
        "fromClause": parse_fromClause,
        "joinClause": parse_joinClause,
        "innerJoin": parse_innerJoin,
        "outerJoin": parse_outerJoin,
        "joinPredicate": parse_joinPredicate,
        "whereClause": parse_whereClause,
        "groupByClause": parse_groupByClause,
        "havingClause": parse_havingClause,
        "orderByClause": parse_orderByClause,
        "rangeClause": parse_rangeClause,
        "offset": parse_offset,
        "limit": parse_limit,
        "expression": parse_expression,
        "condition_and": parse_condition_and,
        "condition": parse_condition,
        "term": parse_term,
        "condition_rhs": parse_condition_rhs,
        "valueList": parse_valueList,
        "compare": parse_compare,
        "order": parse_order,
        "entity": parse_entity,
        "ident": parse_ident,
        "name_entity": parse_name_entity,
        "name_property": parse_name_property,
        "value": parse_value,
        "value_string": parse_value_string,
        "value_numeric": parse_value_numeric,
        "value_int": parse_value_int,
        "value_decimal": parse_value_decimal,
        "value_parameter": parse_value_parameter,
        "lg": parse_lg,
        "le": parse_le,
        "ge": parse_ge,
        "eq": parse_eq,
        "lower": parse_lower,
        "greater": parse_greater,
        "neq": parse_neq,
        "ws": parse_ws,
        "escape_char": parse_escape_char,
        "squote": parse_squote,
        "dquote": parse_dquote,
        "squote_escaped": parse_squote_escaped,
        "dquote_escaped": parse_dquote_escaped,
        "plus": parse_plus,
        "minus": parse_minus,
        "dot": parse_dot,
        "colon": parse_colon,
        "comma": parse_comma,
        "star": parse_star,
        "digit": parse_digit,
        "decimal": parse_decimal,
        "exponent": parse_exponent,
        "boolean": parse_boolean,
        "char_uppercase": parse_char_uppercase,
        "char_lowercase": parse_char_lowercase,
        "name": parse_name,
        "E": parse_E,
        "TRUE": parse_TRUE,
        "FALSE": parse_FALSE,
        "NULL": parse_NULL,
        "IS": parse_IS,
        "IN": parse_IN,
        "NOT": parse_NOT,
        "LIKE": parse_LIKE,
        "AND": parse_AND,
        "OR": parse_OR,
        "LPAREN": parse_LPAREN,
        "RPAREN": parse_RPAREN,
        "BETWEEN": parse_BETWEEN,
        "DOUBLEPIPE": parse_DOUBLEPIPE,
        "GROUP": parse_GROUP,
        "BY": parse_BY,
        "WHERE": parse_WHERE,
        "GROUPBY": parse_GROUPBY,
        "ORDER": parse_ORDER,
        "ORDERBY": parse_ORDERBY,
        "ASC": parse_ASC,
        "DESC": parse_DESC,
        "HAVING": parse_HAVING,
        "SELECT": parse_SELECT,
        "AS": parse_AS,
        "DISTINCT": parse_DISTINCT,
        "FROM": parse_FROM,
        "EXISTS": parse_EXISTS,
        "INNER": parse_INNER,
        "LEFT": parse_LEFT,
        "RIGHT": parse_RIGHT,
        "OUTER": parse_OUTER,
        "JOIN": parse_JOIN,
        "ON": parse_ON,
        "MAX": parse_MAX,
        "MIN": parse_MIN,
        "SUM": parse_SUM,
        "COUNT": parse_COUNT,
        "OFFSET": parse_OFFSET,
        "LIMIT": parse_LIMIT,
        "AS": parse_AS
      };
      
      if (startRule !== undefined) {
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Invalid rule name: " + quote(startRule) + ".");
        }
      } else {
        startRule = "start";
      }
      
      var pos = 0;
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_start() {
        var result0;
        
        result0 = parse_select();
        if (result0 === null) {
          result0 = parse_expression();
        }
        return result0;
      }
      
      function parse_select() {
        var result0;
        
        result0 = parse_selectFull();
        if (result0 === null) {
          result0 = parse_selectShort();
        }
        return result0;
      }
      
      function parse_selectFull() {
        var result0, result1, result2, result3, result4, result5, result6, result7, result8, result9;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_SELECT();
        if (result0 !== null) {
          result1 = parse_DISTINCT();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_selectClause();
            if (result2 !== null) {
              result3 = parse_fromClause();
              if (result3 !== null) {
                result4 = parse_joinClause();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = parse_whereClause();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result6 = parse_groupByClause();
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result7 = parse_havingClause();
                      result7 = result7 !== null ? result7 : "";
                      if (result7 !== null) {
                        result8 = parse_orderByClause();
                        result8 = result8 !== null ? result8 : "";
                        if (result8 !== null) {
                          result9 = parse_rangeClause();
                          result9 = result9 !== null ? result9 : "";
                          if (result9 !== null) {
                            result0 = [result0, result1, result2, result3, result4, result5, result6, result7, result8, result9];
                          } else {
                            result0 = null;
                            pos = pos1;
                          }
                        } else {
                          result0 = null;
                          pos = pos1;
                        }
                      } else {
                        result0 = null;
                        pos = pos1;
                      }
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, d, sc, fc, jc, wc, gc, hc, oc, rc) {
                return new ast.Select(aliases, sc, fc, jc || null, wc || null, gc || null, hc || null, oc || null, rc || null, d === true);
            })(pos0, result0[1], result0[2], result0[3], result0[4], result0[5], result0[6], result0[7], result0[8], result0[9]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_selectShort() {
        var result0, result1, result2, result3, result4, result5, result6;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_fromClause();
        if (result0 !== null) {
          result1 = parse_joinClause();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_whereClause();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_groupByClause();
              result3 = result3 !== null ? result3 : "";
              if (result3 !== null) {
                result4 = parse_havingClause();
                result4 = result4 !== null ? result4 : "";
                if (result4 !== null) {
                  result5 = parse_orderByClause();
                  result5 = result5 !== null ? result5 : "";
                  if (result5 !== null) {
                    result6 = parse_rangeClause();
                    result6 = result6 !== null ? result6 : "";
                    if (result6 !== null) {
                      result0 = [result0, result1, result2, result3, result4, result5, result6];
                    } else {
                      result0 = null;
                      pos = pos1;
                    }
                  } else {
                    result0 = null;
                    pos = pos1;
                  }
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, fc, jc, wc, gc, hc, oc, rc) {
                var selectEntities = fc.list.map(function(entity) {
                    return new ast.SelectEntity(entity.alias || entity.name);
                });
                var sc = new ast.SelectClause(selectEntities);
                return new ast.Select(aliases, sc, fc, jc || null, wc || null, gc || null, hc || null, oc || null, rc || null, false);
            })(pos0, result0[0], result0[1], result0[2], result0[3], result0[4], result0[5], result0[6]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_selectClause() {
        var result0, result1, result2, result3;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_selectExpression();
        if (result0 !== null) {
          result1 = [];
          pos2 = pos;
          result2 = parse_comma();
          if (result2 !== null) {
            result3 = parse_selectExpression();
            if (result3 !== null) {
              result2 = [result2, result3];
            } else {
              result2 = null;
              pos = pos2;
            }
          } else {
            result2 = null;
            pos = pos2;
          }
          while (result2 !== null) {
            result1.push(result2);
            pos2 = pos;
            result2 = parse_comma();
            if (result2 !== null) {
              result3 = parse_selectExpression();
              if (result3 !== null) {
                result2 = [result2, result3];
              } else {
                result2 = null;
                pos = pos2;
              }
            } else {
              result2 = null;
              pos = pos2;
            }
          }
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, head, tail) {
                return new ast.SelectClause(toArray(head, tail));
            })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_selectExpression() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_selectAggregation();
        if (result0 === null) {
          result0 = parse_selectIdent();
          if (result0 === null) {
            result0 = parse_selectEntity();
          }
        }
        if (result0 !== null) {
          result1 = parse_alias();
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_ws();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, expression, resultName) {
                if (resultName) {
                    expression.resultName = resultName;
                }
                return expression;
            })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_selectIdent() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_name();
        if (result0 !== null) {
          result1 = parse_dot();
          if (result1 !== null) {
            result2 = parse_name_property();
            if (result2 !== null) {
              result3 = parse_ws();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, entity, property) {
                return new ast.SelectIdent(entity, property);
            })(pos0, result0[0], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_selectEntity() {
        var result0, result1, result2;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_name();
        if (result0 !== null) {
          pos2 = pos;
          result1 = parse_dot();
          if (result1 !== null) {
            result2 = parse_star();
            if (result2 !== null) {
              result1 = [result1, result2];
            } else {
              result1 = null;
              pos = pos2;
            }
          } else {
            result1 = null;
            pos = pos2;
          }
          result1 = result1 !== null ? result1 : "";
          if (result1 !== null) {
            result2 = parse_ws();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, entity, aggressive) {
                return new ast.SelectEntity(entity, aggressive !== "");
            })(pos0, result0[0], result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_selectAggregation() {
        var result0;
        var pos0;
        
        pos0 = pos;
        result0 = parse_aggregation();
        if (result0 !== null) {
          result0 = (function(offset, a) {
                return new ast.SelectAggregation(a);
            })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_aggregation() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_MAX();
        if (result0 === null) {
          result0 = parse_MIN();
          if (result0 === null) {
            result0 = parse_SUM();
            if (result0 === null) {
              result0 = parse_COUNT();
            }
          }
        }
        if (result0 !== null) {
          result1 = parse_LPAREN();
          if (result1 !== null) {
            result2 = parse_DISTINCT();
            result2 = result2 !== null ? result2 : "";
            if (result2 !== null) {
              result3 = parse_ident();
              if (result3 !== null) {
                result4 = parse_RPAREN();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, type, d, ident) {
                return new ast.Aggregation(ast.Aggregation[type], ident, d === true);
            })(pos0, result0[0], result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_alias() {
        var result0, result1, result2;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_AS();
        if (result0 !== null) {
          result1 = parse_name();
          if (result1 !== null) {
            result2 = parse_ws();
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, alias) {
                return alias;
            })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_fromClause() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_FROM();
        if (result0 !== null) {
          result1 = parse_entity();
          if (result1 !== null) {
            result2 = [];
            pos2 = pos;
            result3 = parse_comma();
            if (result3 !== null) {
              result4 = parse_entity();
              if (result4 !== null) {
                result3 = [result3, result4];
              } else {
                result3 = null;
                pos = pos2;
              }
            } else {
              result3 = null;
              pos = pos2;
            }
            while (result3 !== null) {
              result2.push(result3);
              pos2 = pos;
              result3 = parse_comma();
              if (result3 !== null) {
                result4 = parse_entity();
                if (result4 !== null) {
                  result3 = [result3, result4];
                } else {
                  result3 = null;
                  pos = pos2;
                }
              } else {
                result3 = null;
                pos = pos2;
              }
            }
            if (result2 !== null) {
              result0 = [result0, result1, result2];
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, head, tail) {
                return new ast.FromClause(toArray(head, tail));
            })(pos0, result0[1], result0[2]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_joinClause() {
        var result0, result1;
        var pos0;
        
        pos0 = pos;
        result1 = parse_innerJoin();
        if (result1 === null) {
          result1 = parse_outerJoin();
        }
        if (result1 !== null) {
          result0 = [];
          while (result1 !== null) {
            result0.push(result1);
            result1 = parse_innerJoin();
            if (result1 === null) {
              result1 = parse_outerJoin();
            }
          }
        } else {
          result0 = null;
        }
        if (result0 !== null) {
          result0 = (function(offset, joins) {
                return new ast.JoinClause(joins);
            })(pos0, result0);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_innerJoin() {
        var result0, result1, result2, result3;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_INNER();
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result1 = parse_JOIN();
          if (result1 !== null) {
            result2 = parse_entity();
            if (result2 !== null) {
              result3 = parse_joinPredicate();
              if (result3 !== null) {
                result0 = [result0, result1, result2, result3];
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, entity, predicate) {
                return new ast.InnerJoin(entity, predicate);
            })(pos0, result0[2], result0[3]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_outerJoin() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_LEFT();
        if (result0 === null) {
          result0 = parse_RIGHT();
        }
        result0 = result0 !== null ? result0 : "";
        if (result0 !== null) {
          result1 = parse_OUTER();
          if (result1 !== null) {
            result2 = parse_JOIN();
            if (result2 !== null) {
              result3 = parse_entity();
              if (result3 !== null) {
                result4 = parse_joinPredicate();
                if (result4 !== null) {
                  result0 = [result0, result1, result2, result3, result4];
                } else {
                  result0 = null;
                  pos = pos1;
                }
              } else {
                result0 = null;
                pos = pos1;
              }
            } else {
              result0 = null;
              pos = pos1;
            }
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, side, entity, predicate) {
                return new ast.OuterJoin(side, entity, predicate);
            })(pos0, result0[0], result0[3], result0[4]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_joinPredicate() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_ON();
        if (result0 !== null) {
          result1 = parse_expression();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, expr) {
                return expr;
            })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_whereClause() {
        var result0, result1;
        var pos0, pos1;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_WHERE();
        if (result0 !== null) {
          result1 = parse_expression();
          if (result1 !== null) {
            result0 = [result0, result1];
          } else {
            result0 = null;
            pos = pos1;
          }
        } else {
          result0 = null;
          pos = pos1;
        }
        if (result0 !== null) {
          result0 = (function(offset, expr) {
                return new ast.WhereClause(expr);
            })(pos0, result0[1]);
        }
        if (result0 === null) {
          pos = pos0;
        }
        return result0;
      }
      
      function parse_groupByClause() {
        var result0, result1, result2, result3, result4;
        var pos0, pos1, pos2;
        
        pos0 = pos;
        pos1 = pos;
        result0 = parse_GROUPBY();
        if (result0 !== null) {
          result1 = parse_ident();
          if (result1 !== null) {
            result2 = [];
            pos2 = pos;
            result3 = parse_comma();
